--- a/styles/properties.css
+++ b/styles/properties.css
@@ -15,6 +15,8 @@
 .feature-Days h4,
 .feature-Transit h4,
 .feature-Section h4,
+.feature-MinAge h4,
+.feature-MaxAge h4,
 .feature-Gender h4
  {
 	margin-top: 6px;
