Narrower search box
Make the search box narrower so the About button works

--- a/styles/style.css
+++ b/styles/style.css
@@ -138,6 +138,7 @@ body > div.container {
   #search {
     /*text-align: center;*/
     float: none !important;
+    width: 90%;
   }
 
   #search .form-group {
